finished admin area

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,13 @@
 <title>Login</title>
 </head>
 <body>
-    <form action="/api/v1/auth/login" method="post">
+    <form action="login" method="post">
 		<h2 align="center">SportyShoes Login</h2>
 		<hr />
 		<table align="center">
 			<tr>
-				<td>Email:<td>
-				<td><input type="text" name="email"/><td>
+				<td>Username:<td>
+				<td><input type="text" name="username"/><td>
 			</tr>
 			<tr>
 				<td>Password:<td>
