--- a/src/main/resources/templates/shopHome.html
+++ b/src/main/resources/templates/shopHome.html
@@ -10,21 +10,15 @@
 </head>
 <body>
 	<div align="center">
-		<h1 th:text="${'Welcome, '} + ${username}"></h1>
+		<h1>Welcome to SportyShoes</h1>
 		<hr />
 		<a href="mens_shoes"><button>Men's Shoes</button></a>
 		<br/>
 		<br/>
-		<button>Women's Shoes</button>
-		<br/>
-		<br/>
-		<button>Change Password</button>
+		<a href="womens_shoes"><button>Women's Shoes</button></a>
 		<br/>
 		<br/>
 		<a href="/"><button>Logout</button></a>
-		<br/>
-		<br/>
-		<button>Delete Account</button>
 	</div>
 </body>
 </html>
